[gd_scene load_steps=8 format=3 uid="uid://karakuri_mystery_shell"]

[ext_resource type="Script" path="res://samples/mystery/scripts/dialogue_ui_advanced.gd" id="1_dialogue_adv"]
[ext_resource type="PackedScene" path="res://samples/mystery/ui/evidence_inventory_ui.tscn" id="2_evidence_inventory"]
[ext_resource type="Script" path="res://samples/mystery/scripts/language_switcher_scene.gd" id="3_lang"]
[ext_resource type="PackedScene" path="res://samples/mystery/ui/testimony_ui.tscn" id="4_testimony_system"]
[ext_resource type="Script" path="res://samples/mystery/scripts/health_bar.gd" id="5_health_bar"]
[ext_resource type="Script" path="res://samples/mystery/scripts/ui_capture_driver.gd" id="6_ui_capture_driver"]
[ext_resource type="Script" path="res://samples/mystery/scripts/mystery_shell_ui.gd" id="7_shell_ui"]

[node name="KarakuriMysteryShell" type="Node2D"]
script = ExtResource("7_shell_ui")

[node name="ScenarioRunner" type="KarakuriScenarioRunner" parent="."]
scene_container_path = NodePath("../SceneContainer")
dialogue_ui_path = NodePath("../MainInfoUiLayer/DialogueUI")
evidence_ui_path = NodePath("../InstantSubInfoUiLayer/InventoryUI")
interaction_manager_path = NodePath("../InteractionManager")
testimony_system_path = NodePath("../MainInfoUiLayer/TestimonySystem")

[node name="SceneContainer" type="Node2D" parent="."]

[node name="InteractionManager" type="InteractionManager" parent="."]

[node name="SystemUiLayer" type="CanvasLayer" parent="."]
layer = 30

[node name="UiGuideLabel" type="Label" parent="SystemUiLayer"]
layout_mode = 0
anchor_left = 0.28
anchor_top = 0.01
anchor_right = 0.74
anchor_bottom = 0.06
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
text = "UI Guide: 左=システム / 中下=会話 / 右=証言 / 左中=証拠"
autowrap_mode = 2
horizontal_alignment = 1

[node name="LanguageSwitcher" type="Control" parent="SystemUiLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("3_lang")

[node name="HealthLabel" type="Label" parent="SystemUiLayer"]
layout_mode = 0
anchor_left = 0.02
anchor_top = 0.02
anchor_right = 0.24
anchor_bottom = 0.06
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
text = "HP（ミス可能回数）"

[node name="HealthBar" type="HBoxContainer" parent="SystemUiLayer"]
layout_mode = 0
anchor_left = 0.02
anchor_top = 0.06
anchor_right = 0.24
anchor_bottom = 0.11
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
theme_override_constants/separation = 8
script = ExtResource("5_health_bar")

[node name="InstantSubInfoUiLayer" type="CanvasLayer" parent="."]
layer = 20

[node name="InventoryUI" parent="InstantSubInfoUiLayer" instance=ExtResource("2_evidence_inventory")]

[node name="MainInfoUiLayer" type="CanvasLayer" parent="."]
layer = 10

[node name="DialogueUI" type="Control" parent="MainInfoUiLayer"]
layout_mode = 0
anchor_left = 0.24
anchor_top = 0.63
anchor_right = 0.98
anchor_bottom = 0.98
script = ExtResource("1_dialogue_adv")

[node name="Background" type="ColorRect" parent="MainInfoUiLayer/DialogueUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color(0, 0, 0, 0.68)

[node name="PortraitRect" type="TextureRect" parent="MainInfoUiLayer/DialogueUI"]
layout_mode = 0
offset_left = -260.0
offset_top = -250.0
offset_right = 40.0
offset_bottom = 50.0
mouse_filter = 2
expand_mode = 1
stretch_mode = 5

[node name="UiPartLabel" type="Label" parent="MainInfoUiLayer/DialogueUI"]
layout_mode = 0
offset_left = 10.0
offset_top = 8.0
offset_right = 300.0
offset_bottom = 30.0
text = "会話UI（メイン情報）"

[node name="VBoxContainer" type="VBoxContainer" parent="MainInfoUiLayer/DialogueUI"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 36.0
offset_right = -12.0
offset_bottom = -12.0
theme_override_constants/separation = 8

[node name="NameLabel" type="Label" parent="MainInfoUiLayer/DialogueUI/VBoxContainer"]
layout_mode = 2
text = "話者"
theme_override_font_sizes/font_size = 20

[node name="TextLabel" type="Label" parent="MainInfoUiLayer/DialogueUI/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "ここに会話文が表示されます"
theme_override_font_sizes/font_size = 16
auto_wrapping_enabled = true

[node name="ChoicesContainer" type="VBoxContainer" parent="MainInfoUiLayer/DialogueUI/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_constants/separation = 6

[node name="TestimonySystem" parent="MainInfoUiLayer" instance=ExtResource("4_testimony_system")]

[node name="SubInfoUiLayer" type="CanvasLayer" parent="."]
layer = 0

[node name="UiCaptureDriver" type="Node" parent="."]
script = ExtResource("6_ui_capture_driver")
